crates/hxy-calculator/tests/snapshots/snapshots__err_1.snap
---
source: crates/hxy-calculator/tests/snapshots.rs
expression: rendered
---
err(syntax error at position 3)
