crates/hxy-calculator/tests/snapshots/snapshots__err_abc.snap
---
source: crates/hxy-calculator/tests/snapshots.rs
expression: rendered
---
err(path resolution not supported in this context)
