crates/hxy-calculator/tests/snapshots/snapshots__eval_0x100.snap
---
source: crates/hxy-calculator/tests/snapshots.rs
expression: "format!(\"{} = {}\", case, value.raw())"
---
0x100 = 256
