crates/hxy-calculator/tests/snapshots/snapshots__eval_10_mib.snap
---
source: crates/hxy-calculator/tests/snapshots.rs
expression: "format!(\"{} = {}\", case, value.raw())"
---
10 MiB = 10485760
