crates/hxy-calculator/tests/snapshots/snapshots__eval_10mib.snap
---
source: crates/hxy-calculator/tests/snapshots.rs
expression: "format!(\"{} = {}\", case, value.raw())"
---
10MiB = 10485760
