crates/hxy-calculator/tests/snapshots/snapshots__eval_1_000_000.snap
---
source: crates/hxy-calculator/tests/snapshots.rs
expression: "format!(\"{} = {}\", case, value.raw())"
---
1_000_000 = 1000000
