crates/hxy-calculator/tests/snapshots/snapshots__eval_42.snap
---
source: crates/hxy-calculator/tests/snapshots.rs
expression: "format!(\"{} = {}\", case, value.raw())"
---
42 = 42
