crates/hxy-calculator/tests/snapshots/snapshots__parse_10_mib.snap
---
source: crates/hxy-calculator/tests/snapshots.rs
expression: parsed
---
Literal(
    10485760,
)
