crates/hxy-calculator/tests/snapshots/snapshots__parse_1_000_000.snap
---
source: crates/hxy-calculator/tests/snapshots.rs
expression: parsed
---
Literal(
    1000000,
)
