crates/hxy-calculator/tests/snapshots/snapshots__parse_png_length.snap
---
source: crates/hxy-calculator/tests/snapshots.rs
expression: parsed
---
Path(
    Path {
        root: "png",
        instance: None,
        segments: [
            Name(
                "length",
            ),
        ],
        meta: None,
    },
)
