crates/hxy-calculator/tests/snapshots/snapshots__resolver_len_png_signature.snap
---
source: crates/hxy-calculator/tests/snapshots.rs
expression: "format!(\"{} = {}\", case, value.raw())"
---
len(png.signature) = 8
