crates/hxy-calculator/tests/snapshots/snapshots__resolver_offset_png_signature.snap
---
source: crates/hxy-calculator/tests/snapshots.rs
expression: "format!(\"{} = {}\", case, value.raw())"
---
offset(png.signature) = 0
